# GoftinoWrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
goftino/: __init__.py  utils.py
goftino/fetcher/: fetcher.py
goftino/wrapper/: client.py  data_types.py
tests/: config_sample.json  create_db_tables.py  retrive_test.py  test_client.py
